okkkk i have got to fix this on mobile

--- a/app/base.module.css
+++ b/app/base.module.css
@@ -3,7 +3,7 @@
   grid-template-columns: 1fr 60px 440px repeat(2, 60px) 1fr;
   grid-template-rows:
     minmax(800px, auto)
-    275px 400px auto 400px 1fr;
+    275px 400px auto 200px 1fr;
   overflow: hidden;
 }
 
@@ -16,13 +16,51 @@
   grid-area: 1 / 1 / 2 / -1;
 }
 
+#bottomInfra {
+  display: grid;
+  grid-template-rows: repeat(9, 60px) 200px;
+  grid-template-columns: 1fr 120px 380px 120px 1fr;
+  grid-area: 6 / 1 / 7 / -1;
+}
+
+.diamondContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-area: 1 / 3 / 10 / 4;
+}
+
+.skillDiamond {
+  border: 15px dotted var(--soft-red-color);
+  width: 100%;
+  aspect-ratio: 1;
+  z-index: -1;
+  transform: rotate(45deg);
+}
+
+.skilledAcross {
+  font-family: var(--font-martian);
+  font-size: 20px;
+  font-weight: 300;
+  grid-area: 2 / 3 / 9 / 4;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
 .projects {
   font-size: 60px;
   font-family: var(--font-martian);
   font-weight: 700;
+  font-variation-settings: "wdth" 112.5;
   color: var(--main-text-color);
-  grid-area: 6 / 2 / 7 / -2;
   line-height: 1.2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 .desperation {
@@ -61,6 +99,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .red {
